--- a/blog/blog-backend/package.json
+++ b/blog/blog-backend/package.json
@@ -10,6 +10,7 @@
     "@types/jsonwebtoken": "^8.5.0",
     "@types/koa-router": "^7.4.1",
     "@types/mongoose": "^5.10.3",
+    "@types/sanitize-html": "^1.27.0",
     "bcrypt": "^5.0.0",
     "dotenv": "^8.2.0",
     "eslint-config-prettier": "^7.1.0",
@@ -20,6 +21,7 @@
     "koa-router": "^10.0.0",
     "mongoose": "^5.11.11",
     "node": "^15.4.0",
+    "sanitize-html": "^2.3.0",
     "ts-node": "^9.1.1",
     "typescript": "^4.1.3"
   },
